WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
267780
[WGSL] Failed constant conversion should clean the invalid constant
https://bugs.webkit.org/show_bug.cgi?id=267780
Summary
[WGSL] Failed constant conversion should clean the invalid constant
Tadeu Zagallo
Reported
2024-01-19 12:08:07 PST
...
Attachments
Add attachment
proposed patch, testcase, etc.
Tadeu Zagallo
Comment 1
2024-01-19 12:08:47 PST
<
rdar://problem/121247554
>
Tadeu Zagallo
Comment 2
2024-01-19 12:16:58 PST
Pull request:
https://github.com/WebKit/WebKit/pull/22989
EWS
Comment 3
2024-01-22 05:00:10 PST
Committed
273296@main
(8e62e079b8ab): <
https://commits.webkit.org/273296@main
> Reviewed commits have been landed. Closing PR #22989 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug