[WGSL] Failed constant conversion should clean the invalid constant https://bugs.webkit.org/show_bug.cgi?id=267780 rdar://121247554

Reviewed by Mike Wyrzykowski.

If a constant is not valid in its target type, we should clean it so it's not further
used in subsequent checks.

* Source/WebGPU/WGSL/TypeCheck.cpp:
(WGSL::TypeChecker::visitVariable):
(WGSL::TypeChecker::visit):
(WGSL::TypeChecker::bitcast):
(WGSL::TypeChecker::chooseOverload):
(WGSL::TypeChecker::convertValue):
(WGSL::TypeChecker::convertValueImpl):
(WGSL::TypeChecker::setConstantValue):
* Source/WebGPU/WGSL/tests/invalid/division.wgsl:
* Source/WebGPU/WGSL/tests/invalid/modulo.wgsl:

Canonical link: https://commits.webkit.org/273296@main